fixed spacing bugs

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -26,7 +26,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* ********** reset end ********** */
 /* ********** layout start ********** */
-body { background: url("../images/underline.gif"); -webkit-background-size: 24px; margin: 3em 6em; }
+body { background: url("../images/underline21.gif"); margin: 3em 6em; }
 
 .sidenote { width: 12em; margin-right: 0; position: absolute; top: 0; left: 600px; }
 
@@ -36,14 +36,14 @@ body { background: url("../images/underline.gif"); -webkit-background-size: 24px
 
 /* ********** layout end ********** */
 /* ********** typography start ********** */
-body { font: 16px / 1.5 Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif; }
+body { font: 14px / 1.5 Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 .sidenote { font-size: 0.7em; line-height: 2.143; margin-top: 0em; margin-bottom: 0em; }
 
-p { font-size: 1em; line-height: 1.5; margin-top: 1.5em; margin-bottom: 1.5em; width: 33em; }
+p { font-size: 1em; line-height: 1.5; margin-top: 1.5em; margin-bottom: 0em; width: 33em; }
 
-h1 { font-size: 2em; line-height: 1.5; margin-top: 1.5em; margin-bottom: 1em; font-weight: normal; border-top: 0px solid black; border-bottom: 0px solid black; padding-top: 0em; padding-bottom: 0.5em; }
+h1 { font-size: 2em; line-height: 1.5; margin-top: 1.5em; margin-bottom: 1.5em; font-weight: normal; }
 
 h2 { font-size: 1.167em; line-height: 1.286; margin-top: 0em; margin-bottom: 1.286em; font-weight: normal; }
 
-h3 { font-size: 1.2em; line-height: 1.25; margin-top: 0.625em; margin-bottom: 0.625em; font-weight: normal; border-top: 10px solid black; border-bottom: 10px solid black; }
+h3 { font-size: 8em; line-height: 1.125; margin-top: -0.009em; margin-bottom: -0.009em; font-weight: normal; border-width: 1px 0 1px 0; padding-top: 0em; padding-bottom: 0em; border-style: solid; border-color: black; background: green; }
