--- a/stylesheets/sass/_layout.sass
+++ b/stylesheets/sass/_layout.sass
@@ -1,8 +1,7 @@
 /* ********** layout start **********
 
 body
-  background: url("../images/underline.gif")
-  -webkit-background-size: 24px
+  background: url("../images/underline21.gif")
   margin: 3em 6em
 
 .sidenote
